[tool.poetry]
name = "bike-stem-mount-v2"
version = "0.1.0"
description = ""
authors = ["Yeicor <4929005+Yeicor@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
build123d = "^0.4.0"
yacv-server = "^0.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
